--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Gallery.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Gallery.cshtml
@@ -37,7 +37,7 @@
 </div>
 @Html.Action("Slider", "Home")
 <br />
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         @foreach (var a in Model)
         {
