--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/ClientFeedback.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/ClientFeedback.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Отзывы";
 }
 <div class="row menu-top">
-    <div class="container-fuild menu">
+    <div class="container-fluid menu">
         <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
