--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Index.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "О дизайнере";
 }
 <div class="row menu-top">
-    <div class="container-fuild menu">
+    <div class="container-fluid menu">
         <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
