izmenil poly contekta. add style .cont

--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/ClientFeedback.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/ClientFeedback.cshtml
@@ -121,7 +121,7 @@
             <br />
             <br />
 }
-<div class="container otzyv">
+<div class="container-fluid cont otzyv">
 @foreach (var item in Model.Reviewses)
 {
     <div class="row otziv">
