--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Index.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
     </div>
 </div>
 @Html.Action("Slider", "Home")
-<div class="container-fluid">
+<div class="container-fluid cont">
     <div class="row">
         <h4 align="center">инфо о дизайнере, инфо о дизайнере, инфо о дизайнере</h4>
         <h4 align="center">инфо о дизайнере, инфо о дизайнере, инфо о дизайнере</h4>
