--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Selling.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Selling.cshtml
@@ -37,7 +37,7 @@
 </div>
 @Html.Action("Slider", "Home")
 <br/>
-<div class="container">
+<div class="container-fluid cont">
     <div class="row">
         @foreach (var i in Model)
         {
