--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Shared/_Layout.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,6 @@
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/owl.carousel.css" rel="stylesheet" />
     @*<link href="~/css/owl.theme.default.css" rel="stylesheet" />*@
-
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -28,8 +27,8 @@
                 <a href="/Home/Index"><img src="~/img/logo.jpg" style="width: 100px" alt="Дизайнерские платья" title="Дизайнерские платья"></a>
             </div>
             <div class="col-xs-8 col-sm-8 col-md-4 col-lg-4 name">
-                <h1 style="font-family: shrift; font-size: 2.8vw; margin: 0 0 -10px">S A M A R S K A Y A.</h1>
-                <span style="font-family: shrift; font-size: 1.7vw; ">Платьице с душой.</span>
+                <p style="font-family: 'B52', arial; font-size: 2.8vw; margin: 0 0 -10px">S A M A R S K A Y A.</p>
+                <span style="font-family: 'B52', arial; font-size: 1.7vw; ">Платьице с душой.</span>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 icon">
                 <a href="#"><img src="~/img/fb.png" alt="аккаунт фейсбук" title="аккаунт в фейсбуке"></a>
