--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Shared/_Layout.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <link href="~/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/owl.carousel.css" rel="stylesheet" />
-    @*<link href="~/css/owl.theme.default.css" rel="stylesheet" />*@
+    <link href="~/css/owl.theme.default.css" rel="stylesheet" />
+
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -24,7 +25,7 @@
     <div class="row header">
         <div class="container-fluid headerpat">
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 logo">
-                <a href="/Home/Index"><img src="~/img/logo.jpg" style="width: 100px" alt="Дизайнерские платья" title="Дизайнерские платья"></a>
+                <a href="/Home/Index"><img src="~/img/logo.jpg" style="max-height: 110px; width: auto" alt="Дизайнерские платья" title="Дизайнерские платья"></a>
             </div>
             <div class="col-xs-8 col-sm-8 col-md-4 col-lg-4 name">
                 <p style="font-family: 'B52', arial; font-size: 2.8vw; margin: 0 0 -10px">S A M A R S K A Y A.</p>
