--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Index.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Home/Index.cshtml
@@ -38,18 +38,18 @@
 </div>
 @Html.Action("Slider", "Home")
 <div class="container-fluid cont">
-    <div class="row">
-        <div style="margin-left: 30px; margin-top: 30px">
-            <h4><img style=" float:left; margin: -10px 35px 35px 35px;" src="~/img/dizainer-min.jpg" />
-                &nbsp;&nbsp;Добро пожаловать, меня зовут Таня.  Я дизайнер одежды. И по образованию, и по призванию.<br/><br />
-                &nbsp;&nbsp;Хочу поделиться с Вами своим творчеством, которым активно занимаюсь с конца 2013 года. Как я вижу женский образ? Нежный, романтичный и немножко вне времени. Воспеваю в нем женственность и душевность, что отображается в ручной вышивке, цветочных элементах, кружеве или принте.<br/><br />
-                &nbsp;&nbsp;Дизайнерские вещи от SAMARSKAYA исключительно в одном экземпляре и не повторяются. Более 350 платьиц было сделано и, на данный момент, не повторилось ни одно. Лишь самые востребованные отшиваются по мотивам тех, что Вам так приглянулись, но неизменно в новом виде. Такая концепция работы привносит в Ваш гардероб не только короткосрочную обновку, но и чувства индивидуальности и особенности, которые лишены вещи из масс-маркета.<br/><br />
-                &nbsp;&nbsp;Важно заметить, что изделия не шьются на заказ или по Вашим индивидуальным меркам. В online-гардеробе Вы можете выбрать из ассортимента, который в наличии.        Самые любопытные из Вас наверняка заинтересуются вопросом о размере. Итак, платьица с душой от SAMARSKAYA выполнены без вытачек, простых силуэтов. Таким образом, возможность того, что платье не подойдет минимизирована, что неоднократно проверено. Подобная лаконичность формы подчеркивает Вашу истинную красоту. В этом дуэте главенствует не платье, а блистаете Вы! Приятных покупок! (с)<br />
-                
+    <div class="row" style="margin-top: 30px">
+        <div class ="contdiv">
+            <img  src="~/img/dizainer-min.jpg" class ="contimg" />
+            <h4 style="line-height: 1.7;font-weight: 400">
+                &nbsp;&nbsp;Добро пожаловать, меня зовут Таня. Я дизайнер одежды. И по образованию, и по призванию.<br/><br/>
+                &nbsp;&nbsp;Хочу поделиться с Вами своим творчеством, которым активно занимаюсь с конца 2013 года. Как я вижу женский образ? Нежный, романтичный и немножко вне времени. Воспеваю в нем женственность и душевность, что отображается в ручной вышивке, цветочных элементах, кружеве или принте.<br/><br/>
+                &nbsp;&nbsp;Дизайнерские вещи от SAMARSKAYA исключительно в одном экземпляре и не повторяются. Более 350 платьиц было сделано и, на данный момент, не повторилось ни одно. Лишь самые востребованные отшиваются по мотивам тех, что Вам так приглянулись, но неизменно в новом виде. Такая концепция работы привносит в Ваш гардероб не только короткосрочную обновку, но и чувства индивидуальности и особенности, которые лишены вещи из масс-маркета.<br/><br/>
+                &nbsp;&nbsp;Важно заметить, что изделия не шьются на заказ или по Вашим индивидуальным меркам. В online-гардеробе Вы можете выбрать из ассортимента, который в наличии. Самые любопытные из Вас наверняка заинтересуются вопросом о размере. Итак, платьица с душой от SAMARSKAYA выполнены без вытачек, простых силуэтов. Таким образом, возможность того, что платье не подойдет минимизирована, что неоднократно проверено. Подобная лаконичность формы подчеркивает Вашу истинную красоту. В этом дуэте главенствует не платье, а блистаете Вы! Приятных покупок! (с)<br/>
             </h4>
-            <br />
-            <h4 align="right">Самарская, 2017.</h4>
-            <br />
+            <br/>
+            <h4 align="right" style="line-height: 1.7;font-weight: 400">Самарская, 2017.</h4>
         </div>
+        <br/>
     </div>
-</div>
+    </div>
