--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Shared/_Layout.cshtml
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 <body>
         <div class="row header">
             <div class=" headerpat">
-                <div class="col-xs-1 col-sm-1 col-md-4 col-lg-4 logo">
+                <div class="col-xs-1 col-sm-3 col-md-4 col-lg-4 logo">
                     <a href="/Home/Index"><img src="~/img/logo.jpg" style=" margin-bottom: -12px" alt="Дизайнерские платья" title="Дизайнерские платья"></a>
                 </div>
                 <div class="col-xs-8 col-sm-8 col-md-4 col-lg-4 name">
@@ -31,8 +31,8 @@
                     <span class="samaraL">Платьице с душой.</span>
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-4 col-lg-4 icon">
-                    <a href="#"><img src="~/img/fb.png" alt="аккаунт фейсбук" title="аккаунт в фейсбуке"></a>
-                    <a href="#"><img src="~/img/insta.png" alt="аккаунт в инстaграме" title="аккаунт в инстаграме"></a>
+                    <a href="https://www.facebook.com/tanya.samarskaya.77" target="_blank"><img src="~/img/fb.png" alt="аккаунт фейсбук" title="аккаунт в фейсбуке"></a>
+                    <a href="https://www.instagram.com/samarskaya_designer/" target="_blank"><img src="~/img/insta.png" alt="аккаунт в инстaграме" title="аккаунт в инстаграме"></a>
                     
                     @Html.Action("Summary", "Basket")
                 </div>
@@ -42,7 +42,7 @@
         @RenderBody()
             <div class="row footer" style="border: 1px solid rgba(134, 86, 61, 0.5);
     border-radius: 5px;">
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" style="padding-left: 100px; padding-right: -70px">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" style="text-align: center" >
                 <h4 align="left"><strong>Таблица размеров</strong></h4>
                 <table class="table-bordered">
                     <thead>
@@ -87,10 +87,10 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5" style="padding-right: -100px">
                 <h4 ><strong>Оплата</strong></h4>
-                <p>Для  Украины: наличные/ перевод на банковскую карту.</p>
-                <p>Для зарубежных стран международные переводы: Western Union, SWIFT. </p>
+                <p align="center">Для  Украины: наличные/ перевод на банковскую карту.</p>
+                <p align="center">Для зарубежных стран международные переводы: Western Union, SWIFT. </p>
                 <h4 align="left"><strong>Доставка</strong></h4>
-                <p>
+                <p align="center">
                     Самовывоз/ Новая Почта/ Укрпочта.
                     Посылка отправляется в течение 1-3 дней после оплаты. 
                 </p>
