--- a/AtoITCore/AtoITCore/WebUI/DressShopWebUI/css/style.css
+++ b/AtoITCore/AtoITCore/WebUI/DressShopWebUI/css/style.css
@@ -1,6 +1,18 @@
 .cont {
+    margin: 20px;
 }
-
+.selected {
+    background-color: #a55832
+}.contdiv {
+    margin-left: 30px;
+    margin-right: 40px
+}
+.contimg {
+    width: 280px;
+    height: auto;
+    float: left;
+    margin: -10px 35px 5px 1px;
+}
 .basket, .galerey, .otziv, .partner, .tovar {
     box-shadow: 0 0 5px 0 rgba(50, 50, 50, .58);
 }
@@ -13,6 +25,7 @@ html {
 
 .body {
 }
+
 
 .header {
     margin: 10px 0;
@@ -53,7 +66,6 @@ html {
 }
 
 .otzyv img {
-    max-height: 20px;
 }
 
 .forma {
@@ -149,9 +161,14 @@ html {
     margin-top: 5px;
 }
 
-.itogo {
+.itogo, h4 {
     color: #6d4734;
     font-weight: 600;
+    font-size: 15px;
+}
+.itogo> label {
+    color: #6d4734;
+    font-weight: 400;
     font-size: 15px;
 }
 
@@ -232,9 +249,279 @@ html {
     font-weight: 400;
     src: local('B52'), local('B52-Regular'), url('../fonts/b52_2d0a8eb1572d73815cd2d3ef3196c48b.woff') format('woff'), url('../fonts/b52_2d0a8eb1572d73815cd2d3ef3196c48b.ttf') format('truetype');
 }
-@media only screen and (min-width: 150px) {
+
+.myLi {
+    font-size: 20px;
+    margin-left: 85px;
+    margin-right: 85px;
+}
+
+.samaraH {
+    margin-left: -20px;
+    margin-bottom: -10px;
+    margin-top: -20px;
+    font-size: 2.9vw;
+    font-family: 'B52', arial;
+}
+
+.samaraL {
+    font-size: 2vw;
+    font-family: 'B52', arial;
+}
+
+
+
+
+@media screen and (max-width: 1635px) {
+    .myLi {
+        font-size: 20px;
+        margin-left: 65px;
+        margin-right: 65px;
+    }
+
     .samaraH {
-        margin-right:-50px;
+        margin-left: -20px;
+        margin-bottom: -10px;
+        margin-top: -20px;
+        font-size: 2.9vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        font-size: 2vw;
+        font-family: 'B52', arial;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .myLi {
+        font-size: 20px;
+        margin-left: 46px;
+        margin-right: 46px;
+    }
+
+    .samaraH {
+        margin-left: -20px;
+        margin-bottom: -10px;
+        margin-top: -20px;
+        font-size: 2.9vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        font-size: 2vw;
+        font-family: 'B52', arial;
+    }
+}
+
+
+@media screen and (max-width: 1200px) {
+    .myLi {
+        font-size: 20px;
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+
+    .samaraH {
+        margin-left: -20px;
+        margin-bottom: -10px;
+        margin-top: -20px;
+        font-size: 2.9vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        font-size: 2vw;
+        font-family: 'B52', arial;
+    }
+}
+@media screen and (max-width: 1026px) { /*-----------------IPadPro------------------------*/
+    .myLi {
+        font-size: 20px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .samaraH {
+        margin-left: -20px;
+        margin-bottom: -10px;
+        margin-top: -1px;
+        font-size: 3vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        font-size: 2.6vw;
+        font-family: 'B52', arial;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .myLi {
+        font-size: 16px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .samaraH {
+        margin-right: 0px;
+        margin-bottom: 0px;
+        margin-top: -10px;
+        font-size: 5.6vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        font-size: 3vw;
+        font-family: 'B52', arial;
+    }
+}
+
+@media screen and (max-width: 770px) { /*-----------------iPad------------------------*/
+    .myLi {
+        font-size: 10px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .samaraH {
+        margin-right: -40px;
+        margin-bottom: 0px;
+        margin-top: -10px;
+        font-size: 5.6vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        font-size: 3vw;
+        font-family: 'B52', arial;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .cont {
+        margin: 20px;
+    }
+
+    .contdiv {
+        margin-left: 30px;
+        margin-right: 40px
+    }
+
+    .contimg {
+        width: 280px;
+        height: auto;
+        float: left;
+        margin: -10px 35px 5px 1px;
+    }
+
+    .samaraH {
+        margin-right: -100px;
+        margin-top: 0px;
+        font-size: 5.8vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        margin-left: 30px;
+        font-size: 3.9vw;
+        font-family: 'B52', arial;
+    }
+    .koma {
+        max-height: 20px;
+        margin-left: -20px;
+    }
+}
+@media screen and (max-width: 480px) {
+    .cont {
+        margin: 20px;
+    }
+
+    .contdiv {
+        margin-left: 30px;
+        margin-right: 40px
+    }
+
+    .contimg {
+        width: 280px;
+        height: auto;
+        float: left;
+        margin: -10px 35px 5px 1px;
+    }
+    .samaraH {
+        margin-right: -100px;
+        margin-top: 0px;
+        font-size: 5.8vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        margin-left: 30px;
+        font-size: 3.9vw;
+        font-family: 'B52', arial;
+    }
+    .koma {
+        max-height: 20px;
+        margin-left: -20px;
+    }
+}
+
+@media screen and (max-width: 414px) { /*-----------------Nexus------------------------*/
+    .cont {
+        margin: 0px;
+    }
+    .icon {
+        margin-left: -5px;
+    }
+    .contdiv {
+        margin-left: 35px;
+        margin-right: 35px
+    }
+
+    .contimg {
+        width: 300px;
+        height: auto;
+        float: left;
+        margin: -10px 25px 5px 15px;
+    }
+    .samaraH {
+        margin-right: -90px;
+        margin-top: 0px;
+        font-size: 5.8vw;
+        font-family: 'B52', arial;
+    }
+
+    .samaraL {
+        margin-left: 30px;
+        font-size: 3.9vw;
+        font-family: 'B52', arial;
+    }
+    .koma {
+        max-height: 20px;
+        margin-left: -20px;
+    }
+}
+
+@media screen and (max-width: 375px) { /*-----------------Galaxy S5------------------------*/
+    .cont {
+        margin: 0px;
+    }
+    .icon {
+        margin-left: -5px;
+    }
+    .contdiv {
+        margin-left: 15px;
+        margin-right: 15px
+    }
+
+    .contimg {
+        width: 330px;
+        height: auto;
+        float: left;
+        margin: -10px 35px 5px 1px;
+    }
+    .samaraH {
+        margin-right: -90px;
         margin-top: 0px;
         font-size: 5.9vw;
         font-family: 'B52', arial;
@@ -245,100 +532,46 @@ html {
         font-size: 3.9vw;
         font-family: 'B52', arial;
     }
-    
+    .koma {
+        max-height: 20px;
+        margin-left: -20px;
+    }
 }
 
-@media only screen and (min-device-width: 480px) {
+@media screen and (max-width: 322px) { /*----------------------ifone 5 --------------------*/
+    .cont {
+        margin: 0px;
+    }
+    .icon {
+        margin-left: -15px;
+    } .contdiv {
+        margin-left: 5px;
+        margin-right: 5px
+    }
+
+    .contimg {
+        width: 300px;
+        height: auto;
+        float: left;
+        margin: -10px 35px 5px 1px;
+    }
     .samaraH {
-        margin-left: -40px;
-        margin-bottom: -10px;
-        margin-top: -20px;
-        font-size: 5vw;
+        margin-right:-40px;
+        margin-left: 0px;
+        margin-top: 0px;
+        font-size: 5.5vw;
         font-family: 'B52', arial;
     }
 
     .samaraL {
-        font-size: 3vw;
+        margin-left: 30px;
+        font-size: 3.9vw;
         font-family: 'B52', arial;
     }
-}
-
-@media only screen and (min-device-width: 768px) {
-    .myLi {
-        font-size: 10px;
-        margin-left: 20px;
-        margin-right: 20px;
+    .koma {
+        max-height: 15px;
     }
-    .samaraH {
-        margin-left: -50px;
-        margin-bottom: 0px;
-        margin-top: -10px;
-        font-size: 4.6vw;
-        font-family: 'B52', arial;
-    }
-
-    .samaraL {
-        font-size: 3vw;
-        font-family: 'B52', arial;
-    }
-}
-@media only screen and (min-device-width: 1024px) {
-    .myLi {
-        font-size: 20px;
-        margin-left: 15px;
-        margin-right: 15px;
-    }
-    .samaraH {
-        margin-left: -50px;
-        margin-bottom: -10px;
-        margin-top: -1px;
-        font-size: 3.5vw;
-        font-family: 'B52', arial;
-    }
-
-    .samaraL {
-        font-size: 2.6vw;
-        font-family: 'B52', arial;
-    }
-
-}
-
-
-@media only screen and (min-device-width: 1200px) {
-    .myLi {
-        font-size: 20px;
-        margin-left: 35px;
-        margin-right: 35px;
-    }
-    .samaraH {
-        margin-left: -70px;
-        margin-bottom: -20px;
-        margin-top: -20px;
-        font-size: 2.8vw;
-        font-family: 'B52', arial;
-    }
-
-    .samaraL {
-        font-size: 2vw;
-        font-family: 'B52', arial;
-    }
-}
-@media only screen and (min-device-width: 1600px) {
-    .samaraH {
-        margin-left: -70px;
-        margin-bottom: -20px;
-        margin-top: -20px;
-        font-size: 3.2vw;
-        font-family: 'B52', arial;
-    }
-
-    .samaraL {
-        font-size: 2vw;
-        font-family: 'B52', arial;
-    }
-    .myLi {
-        font-size: 20px;
-        margin-left: 80px;
-        margin-right: 80px;
+    .polosa {
+        max-width: 280px;
     }
 }
